--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./assets/images/img-2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img-2.png" type="image/x-icon">
     <title>My Website</title>
 </head>
 
@@ -101,7 +101,7 @@
                        <button type="submit">See Live</button></a>
                     </div>
                     <div class="project-img">
-                        <img src="./assets/images/img-1.png" alt="img">
+                        <img src="./img-1.png" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
@@ -113,7 +113,7 @@
                         <button type="submit">See Live</button></a>
                     </div>
                     <div class="project-img">
-                        <img src="./assets/images/img-4.png" alt="img">
+                        <img src="./img-4.png" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
@@ -124,7 +124,7 @@
                         <button type="submit">See Live</button></a>
                     </div>
                     <div class="project-img">
-                        <img src="./assets/images/img-3.png" alt="img">
+                        <img src="./img-3.png" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
@@ -134,7 +134,7 @@
                         <p>Build a personal portfolio website that showcases your skills, projects, and accomplishments as a web developer. Design an attractive and visually appealing layout that captures visitors' attention. Include a home page with a captivating headline, professional photo, and summary of your skills. Provide an "About Me" section with a detailed background, education, and professional experience.</p>  <button type="submit">See Live</button>
                     </div>
                     <div class="project-img">
-                        <img src="./assets/images/img-5.png" alt="img">
+                        <img src="./img-5.png" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
@@ -146,7 +146,7 @@
                         <button type="submit">See Live</button></a>
                     </div>
                     <div class="project-img">
-                        <img src="./assets/images/Weather.jpg" alt="img">
+                        <img src="./Weather.jpg" alt="img">
                         
                     </div>
                 </div>
@@ -160,7 +160,7 @@
         <div class="about container">
             <div class="col-left">
                 <div class="about-img">
-                    <img src="./assets/images/img-2.png" alt="img">
+                    <img src="./img-2.png" alt="img">
                 </div>
             </div>
             <div class="col-right">
@@ -217,16 +217,16 @@
             <h2>Your Complete Web Solution</h2>
             <div class="social-icon">
                 <div class="social-item">
-                    <a href="https://www.linkedin.com/in/harsh-dhumal-05241328a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="./assets/icons/linkedin.png" /></a>
+                    <a href="https://www.linkedin.com/in/harsh-dhumal-05241328a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="./linkedin.png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="https://github.com/harshdhumal1"><img src="./assets/icons/github.png" /></a>
+                    <a href="https://github.com/harshdhumal1"><img src="./github.png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="https://www.instagram.com/_harshhhh_27/profilecard/?igsh=MTY2emMzdnd2OGs3dw=="><img src="./assets/icons/Instagram.png" /></a>
+                    <a href="https://www.instagram.com/_harshhhh_27/profilecard/?igsh=MTY2emMzdnd2OGs3dw=="><img src="./Instagram.png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="./assets/icons/facebook.png" /></a>
+                    <a href="#"><img src="./facebook.png" /></a>
                 </div>
             </div>
             <p>Copyright © 2024 Harsh. All rights reserved</p>
