--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./   /images/img-2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img-2.png" type="image/x-icon">
     <title>My Website</title>
 </head>
 
